--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 /Data/*.csv
 /Data/*.xlsx
 
-/Data/Gold Bonds/*.csv
+# /Data/Gold Bonds/*.csv
 /Data/Index/*.csv
 /Data/Mutual Funds/*.csv
 /Data/Stocks/*.csv
